apps/gakhalmo-back-dev/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gakhalmo-back-dev
  namespace: gakhalmo-dev
spec:
  selector:
    app: gakhalmo-back-dev
  ports:
    - name: http
      port: 8000
      targetPort: 8000
